[gd_scene load_steps=16 format=3 uid="uid://dtmqem8v5cr7m"]

[ext_resource type="Script" uid="uid://oumaobjth63w" path="res://scripts/story/story_mode_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ciav2n21hexqb" path="res://assets/images/story_background.png" id="2"]
[ext_resource type="PackedScene" path="res://scenes/universal_tree_view.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkgs8"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ama4m"]
bg_color = Color(0.76037765, 0.90648043, 1, 0.3529412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plus_normal"]
bg_color = Color(0.31061712, 0.31061712, 0.31061706, 0.77254903)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plus_pressed"]
bg_color = Color(0.55265665, 0.99999994, 0.6313455, 0.90588236)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plus_hover"]
bg_color = Color(0, 0.92941177, 0.38431373, 0.90588236)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ay0wa"]
bg_color = Color(0, 0, 0, 0.16470589)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kg3em"]
bg_color = Color(0.26835972, 0.6612928, 0.19275102, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce253"]
bg_color = Color(0.21489933, 0.75829023, 0.31385657, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57v36"]
bg_color = Color(0.21456605, 0.8545345, 0, 0.88235295)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_delete_normal"]
bg_color = Color(0.8, 0.2, 0.2, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_delete_pressed"]
bg_color = Color(0.6, 0.1, 0.1, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_delete_hover"]
bg_color = Color(1, 0.3, 0.3, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.5, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 3

[node name="StoryModePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.3)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pkgs8")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "故事模式"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "关闭"

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300

[node name="StoryListPanel" type="Panel" parent="Panel/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ama4m")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HSplitContainer/StoryListPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StoryListLabel" type="Label" parent="Panel/VBoxContainer/HSplitContainer/StoryListPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "故事列表"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/HSplitContainer/StoryListPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StoryListContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HSplitContainer/StoryListPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="PlusButton" type="Button" parent="Panel/VBoxContainer/HSplitContainer/StoryListPanel/VBoxContainer/ScrollContainer/StoryListContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_plus_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_plus_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_plus_hover")
text = "+"

[node name="TreeViewPanel" type="Panel" parent="Panel/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ay0wa")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TreeViewLabel" type="Label" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
text = "命路歧图"

[node name="OperationBar" type="HBoxContainer" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="NodeTextLabel" type="Label" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel/VBoxContainer/OperationBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
autowrap_mode = 1
clip_text = true

[node name="StartFromButton" type="Button" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel/VBoxContainer/OperationBar"]
visible = false
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_kg3em")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce253")
theme_override_styles/hover = SubResource("StyleBoxFlat_57v36")
text = "从此开始"

[node name="DeleteStoryButton" type="Button" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel/VBoxContainer/OperationBar"]
visible = false
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_delete_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_delete_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_delete_hover")
text = "删除故事"

[node name="TreeViewContainer" type="Control" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="TreeView" parent="Panel/VBoxContainer/HSplitContainer/TreeViewPanel/VBoxContainer/TreeViewContainer" instance=ExtResource("3")]
layout_mode = 1
